--- a/views/_headeredit.pug
+++ b/views/_headeredit.pug
@@ -68,7 +68,6 @@ nav.bg-gray-200
       .col-12
         ol.breadcrumb.breadcrumb-scroll
           li.breadcrumb-item
-            a.text-gray-700(href='/vi/account/websites') Dashboard
+            a.text-gray-700(href='/') Dashboard
           li.breadcrumb-item
-            a.text-gray-700(href='/vi/account/websites') Websites
-          li.breadcrumb-item.active(aria-current='page') baoanh &amp; bao anhh Wedding site!
+            a.text-gray-700(href='') Websites
