--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -11,22 +11,17 @@ block content
                 | N&#x1EC1;n t&#x1EA3;ng t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i
                 span.fw-bold  mi&#x1EC5;n ph&iacute;
                 |  t&#x1EEB;
-                span.text-danger  Behappy 
+                span.text-danger  Biihappy 
               p.lead.text-center.text-md-start.text-muted.mb-6.mb-lg-8
                 | H&atilde;y t&#x1EB7;ng cho ng&agrave;y c&#x1B0;&#x1EDB;i c&#x1EE7;a b&#x1EA1;n m&#x1ED9;t wedding website tuy&#x1EC7;t v&#x1EDD;i v&agrave;
                 | ho&agrave;n to&agrave;n mi&#x1EC5;n ph&iacute;.
               .text-center.text-md-start
-                a.btn.btn-danger.shadow.lift.me-1.mb-3(href='/wedding/templates')
+                a.btn.btn-danger.shadow.lift.me-1.mb-3(href='/wedding/templates/createwedding' target='_blank')
                   | B&#x1EAF;t &dstrok;&#x1EA7;u mi&#x1EC5;n ph&iacute;
                   i.fe.fe-arrow-right.d-none.d-md-inline.ms-3
-                a.btn.btn-danger-soft.lift.mb-3(href='/wedding/templates')
+                a.btn.btn-danger-soft.lift.mb-3(href='/wedding/templates'  target='_blank')
                   | Th&#x1B0; vi&#x1EC7;n giao di&#x1EC7;n
                   i.fe.fe-arrow-right.d-none.d-md-inline.ms-3
-              .text-center.text-md-start
-                a.text-muted(href='https://blog.#/post/huong-dan-tao-website-dam-cuoi-tren-nen-tang-Behappy' target='_blank')
-                  | Click v&agrave;o &dstrok;&acirc;y &dstrok;&#x1EC3; xem
-                  span.fw-bold  h&#x1B0;&#x1EDB;ng d&#x1EAB;n
-                  |  t&#x1EA1;o website.
       section.py-8.pb-1.border-bottom.bg-light
         .container
           .row.align-items-center.mb-5
@@ -37,17 +32,12 @@ block content
                 | M&#x1ED9;t c&#x1ED9;ng &dstrok;&#x1ED3;ng thu nh&#x1ECF; c&#x1EE7;a nh&#x1EEF;ng &dstrok;&ocirc;i l&#x1EE9;a &dstrok;&atilde;, &dstrok;ang v&agrave; s&#x1EAF;p c&#x1B0;&#x1EDB;i.
                 | Xem, c&#x1EA3;m nh&#x1EAD;n v&agrave; &dstrok;&#x1EEB;ng qu&ecirc;n &dstrok;&#x1EC3; l&#x1EA1;i nh&#x1EEF;ng l&#x1EDD;i ch&uacute;c t&#x1ED1;t &dstrok;&#x1EB9;p cho h&#x1ECD;
                 | nh&eacute;!
-            .col-12.col-md-auto
-              a.btn.btn-sm.btn-outline-danger.d-none.d-md-inline(href='wedding/sites.html')
-                | Xem t&#x1EA5;t c&#x1EA3;
-                i.fe.fe-arrow-right.d-none.d-md-inline.ms-3
           .row
-            .col-12.col-md-6.col-lg-4.d-flex.mb-7.site-item(data-id='621a5f5145a01e4ce37902bb')
+            .col-12.col-md-6.col-lg-4.d-flex.mb-7.site-item(data-id='62793abbf277951fc0119a7b')
               .card.pt-14.overlay.overlay-black.overlay-40.bg-cover.shadow-light-lg(style='background-image: url(/img/wedding/banner_top.png);')
                 .card-meta.mt-auto.mb-0.pb-0
                   .d-block.w-100.text-center
-                    a.btn.btn-sm.btn-outline-light.mt-2(href='http://ngocduy1505.iwedding.info/' target='_blank') Xem trang
-                    a.btn.btn-sm.btn-outline-light.mt-2(href='http://ngocduy1505.iwedding.info/photo-album' target='_blank') Xem album
+                    a.btn.btn-sm.btn-outline-light.mt-2(href='/wedding/preview/62793abbf277951fc0119a7b' target='_blank') Xem trang
                 a.card-body.mt-0.py-7.mt-0(href='http://ngocduy1505.iwedding.info/' target='_blank')
                   p.mb-0.text-white
                     | D&#x1B0;&#x1A1;ng Th&aacute;i Duy &amp; Tr&#x1EA7;n Ng&#x1ECD;c Hi&#x1EC1;n - Our wedding date:
@@ -95,7 +85,54 @@ block content
                     svg.bi.bi-heart-fill.text-danger.w-100.h-100(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewbox='0 0 16 16')
                       path(fill-rule='evenodd' d='M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z')
                   h5.text-uppercase.text-white.me-2.mb-0.text-center
-                    | D&#x1B0;&#x1A1;ng &amp; Fa Fa        
+                    | D&#x1B0;&#x1A1;ng &amp; Fa Fa
+      section#sectionFeatures.py-8.py-md-11.border-bottom
+        .container
+          .row.justify-content-center
+            .col-12.text-center
+              h3.fs-1
+                | T&#x1EA1;i sao n&ecirc;n x&acirc;y d&#x1EF1;ng website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i?
+              p.fs-lg.text-muted.mb-7.mb-md-9
+                | S&#x1ED1;ng trong th&#x1EDD;i &dstrok;&#x1EA1;i c&ocirc;ng ngh&#x1EC7; s&#x1ED1;, t&#x1EA1;i sao ch&uacute;ng ta kh&ocirc;ng c&oacute; m&#x1ED9;t website c&#x1B0;&#x1EDB;i c&#x1EE7;a ri&ecirc;ng m&igrave;nh? Th&#x1EAD;t &dstrok;&#x1A1;n gi&#x1EA3;n &dstrok;&#x1EC3; s&#x1EDF; h&#x1EEF;u m&#x1ED9;t giao di&#x1EC7;n t&#x1EA1;o website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i v&#x1EDB;i c&aacute;c t&iacute;nh n&abreve;ng &dstrok;&#x1ED9;c &dstrok;&aacute;o, ngh&#x1EC7; thu&#x1EAD;t. V&agrave; &dstrok;&#x1EB7;c bi&#x1EC7;t, n&oacute; ho&agrave;n to&agrave;n 
+                strong Mi&#x1EC5;n Ph&iacute;
+                |  v&#x1EDB;i Biihappy.
+          .row
+            .col-12.col-md-6.col-lg-4.text-center
+              .icon-circle.bg-danger.text-white.mb-5
+                img(src='https://biihappy.com/static/img/wedding/icons/hour_icon.svg' width='40' alt='Có ngay website sau 3 nốt nhạc mà không cần biết lập trình')
+              h3.fw-bold C&oacute; ngay website sau 3 n&#x1ED1;t nh&#x1EA1;c m&agrave; kh&ocirc;ng c&#x1EA7;n bi&#x1EBF;t l&#x1EAD;p tr&igrave;nh
+              p.text-muted.mb-8
+                | B&#x1EA5;t c&#x1EE9; ai c&utilde;ng c&oacute; th&#x1EC3; d&#x1EC5; d&agrave;ng t&#x1EA1;o ra m&#x1ED9;t website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i &dstrok;&#x1EB9;p m&#x1ED9;t c&aacute;ch nhanh ch&oacute;ng m&agrave; kh&ocirc;ng c&#x1EA7;n ph&#x1EA3;i bi&#x1EBF;t l&#x1EAD;p tr&igrave;nh. Ch&#x1EC9; c&#x1EA7;n s&#x1EED; d&#x1EE5;ng kho giao di&#x1EC7;n c&oacute; s&#x1EB5;n k&egrave;m v&#x1EDB;i v&agrave;i thao t&aacute;c nhanh g&#x1ECD;n.
+            .col-12.col-md-6.col-lg-4.text-center
+              .icon-circle.bg-primary-desat.text-white.mb-5
+                img(src='https://biihappy.com/static/img/wedding/icons/share_icon.svg' width='40' alt='Dễ dàng chia sẻ câu chuyện tình yêu của bạn cho bạn bè')
+              h3.fw-bold D&#x1EC5; d&agrave;ng chia s&#x1EBB; c&acirc;u chuy&#x1EC7;n t&igrave;nh y&ecirc;u c&#x1EE7;a b&#x1EA1;n cho b&#x1EA1;n b&egrave;
+              p.text-muted.mb-8.mb-lg-0
+                | Kh&ocirc;ng ph&#x1EA3;i l&uacute;c n&agrave;o b&#x1EA1;n c&utilde;ng c&oacute; th&#x1EDD;i gian &dstrok;&#x1EC3; k&#x1EC3; c&acirc;u chuy&#x1EC7;n t&igrave;nh y&ecirc;u c&#x1EE7;a b&#x1EA1;n cho t&#x1EEB;ng ng&#x1B0;&#x1EDD;i. H&atilde;y c&ugrave;ng IWedding xu&#x1EA5;t b&#x1EA3;n c&acirc;u chuy&#x1EC7;n t&igrave;nh y&ecirc;u c&#x1EE7;a b&#x1EA1;n v&agrave; chia s&#x1EBB; n&oacute; &dstrok;&#x1EBF;n t&#x1EA5;t c&#x1EA3; m&#x1ECD;i ng&#x1B0;&#x1EDD;i.
+            .col-12.col-md-6.col-lg-4.text-center
+              .icon-circle.bg-dark.text-white.mb-5
+                img(src='https://biihappy.com/static/img/wedding/icons/save_icon.svg' width='35' alt='Lưu giữ mãi mãi và dễ dàng chia sẻ album cưới online')
+              h3.fw-bold L&#x1B0;u gi&#x1EEF; m&atilde;i m&atilde;i v&agrave; d&#x1EC5; d&agrave;ng chia s&#x1EBB; album c&#x1B0;&#x1EDB;i online
+              p.text-muted.mb-8.mb-md-0
+                | Ch&#x1EB3;ng c&ograve;n lo s&#x1EE3; cu&#x1ED1;n album h&igrave;nh c&#x1B0;&#x1EDB;i b&#x1ECB; h&#x1B0; h&#x1ECF;ng hay &dstrok;&ocirc;i khi &dstrok;&#x1EC3; &#x1EDF; &dstrok;&acirc;u kh&ocirc;ng t&igrave;m th&#x1EA5;y. &Dstrok;&atilde; c&oacute; IWedding l&#x1B0;u tr&#x1EEF; gi&uacute;p b&#x1EA1;n, d&#x1EC5; d&agrave;ng chia s&#x1EBB; n&oacute; cho b&#x1EA5;t k&#x1EF3; ai v&agrave; b&#x1EA5;t k&igrave; &dstrok;&acirc;u. Th&#x1EAD;t tuy&#x1EC7;t v&#x1EDD;i &dstrok;&uacute;ng kh&ocirc;ng!
+            .col-12.col-md-6.col-lg-4.text-center
+              .icon-circle.bg-warning.text-white.mb-5
+                img(src='https://biihappy.com/static/img/wedding/icons/template_icon.svg' width='40' alt='Thư viện giao diện tuyệt đẹp và được cập nhật liên tục')
+              h3.fw-bold Th&#x1B0; vi&#x1EC7;n giao di&#x1EC7;n tuy&#x1EC7;t &dstrok;&#x1EB9;p v&agrave; &dstrok;&#x1B0;&#x1EE3;c c&#x1EAD;p nh&#x1EAD;t li&ecirc;n t&#x1EE5;c
+              p.text-muted.mb-8
+                | B&#x1EA1;n s&#x1EBD; y&ecirc;u ngay nh&#x1EEF;ng m&#x1EAB;u giao di&#x1EC7;n c&#x1EE7;a ch&uacute;ng t&ocirc;i t&#x1EEB; c&aacute;i nh&igrave;n &dstrok;&#x1EA7;u ti&ecirc;n. Li&ecirc;n t&#x1EE5;c c&#x1EAD;p nh&#x1EAD;t v&agrave; c&#x1EA3;i ti&#x1EBF;n. B&#x1EA1;n c&oacute; th&#x1EC3; tho&#x1EA3;i m&aacute;i l&#x1EF1;a ch&#x1ECD;n v&agrave; thay &dstrok;&#x1ED5;i b&#x1EA5;t k&#x1EF3; l&uacute;c n&agrave;o ch&#x1EC9; v&#x1EDB;i v&agrave;i thao t&aacute;c &dstrok;&#x1A1;n gi&#x1EA3;n.
+            .col-12.col-md-6.col-lg-4.text-center
+              .icon-circle.bg-success.text-white.mb-5
+                img(src='https://biihappy.com/static/img/wedding/icons/heart_icon.svg' width='40' alt='Cho phép bạn bè gửi lời chúc mừng, và lưu giữ mãi mãi')
+              h3.fw-bold Cho ph&eacute;p b&#x1EA1;n b&egrave; g&#x1EED;i l&#x1EDD;i ch&uacute;c m&#x1EEB;ng, v&agrave; l&#x1B0;u gi&#x1EEF; m&atilde;i m&atilde;i
+              p.text-muted.mb-8
+                | H&atilde;y &dstrok;&#x1EC3; nh&#x1EEF;ng l&#x1EDD;i ch&uacute;c m&#x1EEB;ng c&#x1EE7;a b&#x1EA1;n b&egrave; &dstrok;&#x1B0;&#x1EE3;c l&#x1B0;u gi&#x1EEF; m&atilde;i theo th&#x1EDD;i gian. Th&#x1EAD;t tuy&#x1EC7;t v&#x1EDD;i n&#x1EBF;u 10 n&abreve;m, 20 n&abreve;m sau b&#x1EA1;n v&#x1EAB;n c&ograve;n nh&igrave;n th&#x1EA5;y n&oacute; v&agrave; h&#x1ED3;i t&#x1B0;&#x1EDF;ng l&#x1EA1;i nh&#x1EEF;ng ho&agrave;i ni&#x1EC7;m c&#x1EE7;a ng&agrave;y tr&#x1ECD;ng &dstrok;&#x1EA1;i.
+            .col-12.col-md-6.col-lg-4.text-center
+              .icon-circle.bg-primary.text-white.mb-5
+                img(src='https://biihappy.com/static/img/wedding/icons/clock_icon.svg' width='40' alt='Bộ đếm thời gian ngày cưới, hiển thị chính xác từng giây')
+              h3.fw-bold B&#x1ED9; &dstrok;&#x1EBF;m th&#x1EDD;i gian ng&agrave;y c&#x1B0;&#x1EDB;i, hi&#x1EC3;n th&#x1ECB; ch&iacute;nh x&aacute;c t&#x1EEB;ng gi&acirc;y
+              p.text-muted.mb-0
+                | Nh&#x1EAF;c nh&#x1EDF; b&#x1EA1;n c&utilde;ng nh&#x1B0; b&#x1EA1;n b&egrave; v&#x1EC1; th&#x1EDD;i gian di&#x1EC5;n ra &dstrok;&aacute;m c&#x1B0;&#x1EDB;i. V&agrave; n&oacute; c&utilde;ng gi&uacute;p b&#x1EA1;n &dstrok;&#x1EBF;m &dstrok;&#x1B0;&#x1EE3;c s&#x1ED1; ng&agrave;y k&#x1EC3; t&#x1EEB; l&uacute;c b&#x1EA1;n t&#x1ED5; ch&#x1EE9;c &dstrok;&aacute;m c&#x1B0;&#x1EDB;i. T&#x1EEB; &dstrok;&oacute; l&ecirc;n k&#x1EBF; ho&#x1EA1;ch cho nh&#x1EEF;ng bu&#x1ED5;i k&#x1EF7; ni&#x1EC7;m &dstrok;&#x1EA7;y &yacute; ngh&itilde;a.           
       section.pt-8.pt-md-11.bg-light.pb-11.overflow-hidden
         .container
           .row.align-items-center.justify-content-between.mb-8.mb-md-11
@@ -105,8 +142,8 @@ block content
                 | !
                 br
                 span.text-danger
-                  | M&#x1ECD;i th&#x1EE9; &dstrok;&#x1EC1;u r&#x1EA5;t
-                  span#typed1(data-typed='{"strings": ["dễ dàng.", "nhanh chóng."], "loop": true, "typeSpeed" : 50}')
+                  | M&#x1ECD;i th&#x1EE9; &dstrok;&#x1EC1;u r&#x1EA5;t 
+                  span#typed1(data-typed='{"strings": [" dễ dàng.", " nhanh chóng."], "loop": true, "typeSpeed" : 50}')
               p.fs-lg.text-muted.mb-6
                 | &Dstrok;&#x1EEB;ng lo l&#x1EAF;ng n&#x1EBF;u b&#x1EA1;n ch&#x1B0;a bi&#x1EBF;t c&aacute;ch th&#x1EF1;c hi&#x1EC7;n, Ch&#x1EC9; c&#x1EA7;n th&#x1EF1;c hi&#x1EC7;n
                 | 4 b&#x1B0;&#x1EDB;c b&ecirc;n d&#x1B0;&#x1EDB;i, b&#x1EA1;n s&#x1EBD; c&oacute; ngay m&#x1ED9;t website &dstrok;&aacute;m c&#x1B0;&#x1EDB;i tuy&#x1EC7;t &dstrok;&#x1EB9;p
@@ -267,7 +304,7 @@ block content
               p.fs-lg.text-muted.mb-6.mb-md-8
                 | C&ograve;n ch&#x1EA7;n ch&#x1EEB; g&igrave; n&#x1EEF;a? H&atilde;y t&#x1EB7;ng cho ng&agrave;y c&#x1B0;&#x1EDB;i c&#x1EE7;a b&#x1EA1;n m&#x1ED9;t website
                 | tuy&#x1EC7;t v&#x1EDD;i ngay b&acirc;y gi&#x1EDD; ch&#x1EC9; v&#x1EDB;i v&agrave;i thao t&aacute;c nh&#x1ECF;!
-              a.btn.btn-danger.lift(href='wedding/templates.html' target='_blank')
+              a.btn.btn-danger.lift(href='/wedding/templates/createwedding' target='_blank')
                 | B&#x1EAF;t &dstrok;&#x1EA7;u mi&#x1EC5;n ph&iacute; 
                 i.fe.fe-arrow-right
       .position-relative
