--- a/views/templates.pug
+++ b/views/templates.pug
@@ -32,7 +32,7 @@ block content
     section.pt-7.pt-md-10.pb-7
         .container
             #sectionTemplates.row
-                .col-12.col-md-6.col-lg-4.d-flex.mb-7.template-item(id='6174ee7a7a1c7661fb0a671c')
+                .col-12.col-md-6.col-lg-6.d-flex.mb-7.template-item(id='6174ee7a7a1c7661fb0a671c')
                     .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
                         a.card-img-top(href='#')
                             img(src='/img/templates/picture1.jpg' alt="Modern" class="card-img-top")
@@ -48,8 +48,8 @@ block content
                             hr.card-meta-divider
                             .d-block.w-100.text-center
                                 a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=6174ee7a7a1c7661fb0a671c' target='_blank') Xem tr&#x1B0;&#x1EDB;c
-                                a.btn.btn-sm.btn-danger-soft(href='/wedding/templates/test') T&#x1EA1;o website
-                .col-12.col-md-6.col-lg-4.d-flex.mb-7.template-item(data-id='6174ee5134c46827c45a50e5')
+                                a.btn.btn-sm.btn-danger-soft(href='/wedding/templates/createWedding1'  target='_blank') T&#x1EA1;o website
+                .col-12.col-md-6.col-lg-6.d-flex.mb-7.template-item(data-id='6174ee5134c46827c45a50e5')
                     .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
                         a.card-img-top(href='startd90f.html?template=6174ee5134c46827c45a50e5')
                             img.card-img-top(src='/img/templates/picture2.jpg' alt='Minimalism')
@@ -65,72 +65,4 @@ block content
                             hr.card-meta-divider
                             .d-block.w-100.text-center
                                 a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=6174ee5134c46827c45a50e5' target='_blank') Xem tr&#x1B0;&#x1EDB;c
-                                a.btn.btn-sm.btn-danger-soft(href='startd90f.html?template=6174ee5134c46827c45a50e5') T&#x1EA1;o website
-                .col-12.col-md-6.col-lg-4.d-flex.mb-7.template-item(data-id='6174ee15b129456cb25a0566')
-                    .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
-                        a.card-img-top(href='startb537.html?template=6174ee15b129456cb25a0566')
-                            img.card-img-top(src='/img/templates/picture3.jpg' alt='Hold my hand')
-                            .position-relative
-                                .shape.shape-bottom.shape-fluid-x.text-white
-                                    svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
-                                        path(fill-rule='evenodd' clip-rule='evenodd' d='M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z' fill='currentColor')
-                        a.card-body(href='startb537.html?template=6174ee15b129456cb25a0566')
-                            h3 Hold my hand
-                            p.mb-0.text-muted
-                            | N&#x1EAF;m tay anh th&#x1EAD;t ch&#x1EB7;t, gi&#x1EEF; tay anh th&#x1EAD;t l&acirc;u...T&igrave;nh y&ecirc;u b&#x1EAF;t &dstrok;&#x1EA7;u t&#x1EEB; nh&#x1EEF;ng s&#x1EF1; t&igrave;nh c&#x1EDD; v&agrave; sau &dstrok;&oacute; l&agrave; c&aacute;i n&#x1EAF;m tay &#x1EA5;m &aacute;p, d&#x1ECB;u d&agrave;ng t&#x1EEB; anh.
-                        .card-meta.mt-auto
-                            hr.card-meta-divider
-                            .d-block.w-100.text-center
-                                a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=6174ee15b129456cb25a0566' target='_blank') Xem tr&#x1B0;&#x1EDB;c
-                                a.btn.btn-sm.btn-danger-soft(href='startb537.html?template=6174ee15b129456cb25a0566') T&#x1EA1;o website
-                .col-12.col-md-6.col-lg-4.d-flex.mb-7.template-item(data-id='6174edbdff1ef271cb2d8bc4')
-                    .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
-                        a.card-img-top(href='startb561.html?template=6174edbdff1ef271cb2d8bc4')
-                            img.card-img-top(src='/img/templates/picture4.jpg' alt='Peaceful')
-                            .position-relative
-                                .shape.shape-bottom.shape-fluid-x.text-white
-                                    svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
-                                        path(fill-rule='evenodd' clip-rule='evenodd' d='M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z' fill='currentColor')
-                        a.card-body(href='startb561.html?template=6174edbdff1ef271cb2d8bc4')
-                            h3 Peaceful
-                            p.mb-0.text-muted
-                            | T&ocirc; b&igrave;nh y&ecirc;n - V&#x1EBD; h&#x1EA1;nh ph&uacute;c. Ch&#x1EE7; &dstrok;&#x1EC1; mang h&#x1A1;i h&#x1B0;&#x1EDB;ng t&#x1EF1; nhi&ecirc;n v&agrave; g&#x1EA7;n g&utilde;i. C&#x1EA3;m gi&aacute;c th&acirc;n m&#x1EAD;t gi&#x1EA3;n d&#x1ECB; chan h&ograve;a c&ugrave;ng thi&ecirc;n nhi&ecirc;n, m&#x1ED9;t h&#x1A1;i th&#x1EDF; trong l&agrave;nh v&agrave; tinh kh&ocirc;i.
-                        .card-meta.mt-auto
-                            hr.card-meta-divider
-                            .d-block.w-100.text-center
-                                a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=6174edbdff1ef271cb2d8bc4' target='_blank') Xem tr&#x1B0;&#x1EDB;c
-                                a.btn.btn-sm.btn-danger-soft(href='startb561.html?template=6174edbdff1ef271cb2d8bc4') T&#x1EA1;o website
-                .col-12.col-md-6.col-lg-4.d-flex.mb-7.template-item(data-id='61338a310cf1357216675f18')
-                    .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
-                        a.card-img-top(href='startf4d9.html?template=61338a310cf1357216675f18')
-                            img.card-img-top(src='/img/templates/picture5.jpg' alt='Romantic')
-                            .position-relative
-                                .shape.shape-bottom.shape-fluid-x.text-white
-                                    svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
-                                        path(fill-rule='evenodd' clip-rule='evenodd' d='M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z' fill='currentColor')
-                        a.card-body(href='startf4d9.html?template=61338a310cf1357216675f18')
-                            h3 Romantic
-                            p.mb-0.text-muted
-                                | M&#x1ED9;t &dstrok;&aacute;m c&#x1B0;&#x1EDB;i y&ecirc;u ki&#x1EC1;u, &dstrok;&#x1EA7;y th&#x1A1; m&#x1ED9;ng nh&#x1B0; trong nh&#x1EEF;ng c&acirc;u chuy&#x1EC7;n c&#x1ED5; t&iacute;ch. Thi&#x1EBF;t k&#x1EBF; tinh t&#x1EBF;, d&#x1ECB;u d&agrave;ng, tao nh&atilde;, r&#x1EA5;t l&atilde;ng m&#x1EA1;n m&agrave; v&#x1EAB;n &dstrok;&#x1EA7;y t&#x1B0;&#x1A1;i m&#x1EDB;i.
-                        .card-meta.mt-auto
-                            hr.card-meta-divider
-                            .d-block.w-100.text-center
-                                a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=61338a310cf1357216675f18' target='_blank') Xem tr&#x1B0;&#x1EDB;c
-                                a.btn.btn-sm.btn-danger-soft(href='startf4d9.html?template=61338a310cf1357216675f18') T&#x1EA1;o website
-                .col-12.col-md-6.col-lg-4.d-flex.mb-7.template-item(data-id='60d9d51ad8eec60dc9382e37')
-                    .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
-                        a.card-img-top(href='start30a7.html?template=60d9d51ad8eec60dc9382e37')
-                            img.card-img-top(src='/img/templates/picture6.jpg' alt='Retro & Vintage')
-                            .position-relative
-                                .shape.shape-bottom.shape-fluid-x.text-white
-                                    svg(viewbox='0 0 2880 480' fill='none' xmlns='http://www.w3.org/2000/svg')
-                                        path(fill-rule='evenodd' clip-rule='evenodd' d='M2160 0C1440 240 720 240 720 240H0v240h2880V0h-720z' fill='currentColor')
-                        a.card-body(href='start30a7.html?template=60d9d51ad8eec60dc9382e37')
-                            h3 Retro &amp; Vintage
-                            p.mb-0.text-muted
-                            | &ldquo;T&igrave;nh nh&#x1B0; x&#x1B0;a&rdquo; - m&#x1ED9;t ch&uacute;t c&#x1ED5; &dstrok;i&#x1EC3;n, m&#x1ED9;t ch&uacute;t ho&agrave;i ni&#x1EC7;m c&ugrave;ng c&#x1EA3;m x&uacute;c b&#x1ED3;i h&#x1ED3;i nh&#x1EDB; v&#x1EC1; t&igrave;nh y&ecirc;u thu&#x1EDF; &dstrok;&#x1EA7;u quen nhau, tinh t&#x1EBF; v&#x1EDB;i nh&#x1EEF;ng gam m&agrave;u tr&#x1EA7;m ho&#x1EB7;c trung t&iacute;nh.
-                        .card-meta.mt-auto
-                            hr.card-meta-divider
-                            .d-block.w-100.text-center
-                                a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=60d9d51ad8eec60dc9382e37' target='_blank') Xem tr&#x1B0;&#x1EDB;c
-                                a.btn.btn-sm.btn-danger-soft(href='start30a7.html?template=60d9d51ad8eec60dc9382e37') T&#x1EA1;o website
+                                a.btn.btn-sm.btn-danger-soft(href='/wedding/templates/createWedding2'  target='_blank') T&#x1EA1;o website
