--- a/views/error.pug
+++ b/views/error.pug
@@ -1,8 +1,8 @@
 extends base
 block content
-    main.main
-    .error
-        .error__title
-        h2.heading-secondary.heading-secondary--error Uh oh! Something went wrong!   
-        h2.error__emoji 😢 🤯
-        .error__msg Page not found!
+    main.main(style='margin-top:100px')
+        .error(style='text-align:center;height: 478px;')
+            .error__title
+                h2.heading-secondary.heading-secondary--error Uh oh! Something went wrong!   
+                h2.error__emoji 😢 🤯
+            .error__msg Page not found!
